--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.6.8",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-loading-skeleton": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
